--- a/exercise2.html
+++ b/exercise2.html
@@ -2,12 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Exercise 2</title>
     <link rel="stylesheet" href="">
     <script src="vue.js"></script>
   </head>
   <body>
     <div id="exercise2">
+      <h1>Exercise 2</h1>
+
       <div>
         <button v-on:click="showAlert">Show Alert</button>
       </div>
